--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ button:focus {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
-  line-height: 1.16;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
@@ -77,6 +77,7 @@ button:focus {
 .header-contacts-item {}
 
 .header-contacts-link {
+  font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
@@ -239,7 +240,7 @@ button:focus {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
     font-size: 18px;
-    line-height: 1.16;
+    line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
