--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,23 @@ button:focus {
 
 .header-nav-item {}
 
+
+.item-nav-link {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+
+.item-nav-link {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+
 .item-nav-link {
   font-weight: 500;
   font-size: 16px;
